GetServicesusingKubeConfig/TCP Routing two App/Service_both.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
---
apiVersion: v1
kind: Service
metadata:
  name: opencost
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9003
      protocol: TCP
      targetPort: 9003
    - name: http-ui
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/name: opencost
