GetServicesusingKubeConfig/TCP Routing two App/Ingress_both.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: grafana-tcp-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`*`)
      services:
        - name: grafana
          port: 3000
  tls:
    passthrough: true # Allows the route to pass through Traefik without terminating TLS
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: opencost-tcp-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`*`)
      services:
        - name: opencost
          port: 9003
  tls:
    passthrough: true
